java judger: add TLE and WA judge